# SnapFolio

./: .env.example  .gitignore  DESIGN.md  ML_POC.md  README.md  README_zh.md  app.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
snapfolio/: __init__.py  __main__.py  classify.py  cli.py  document.py  export.py  i18n.py  llm_fallback.py  llm_prompt.py  models.py  numbers.py  ocr.py  ocr_audit.py  ocr_normalize.py  pipeline.py  reconcile.py  validate.py
snapfolio/extractors/: __init__.py  base.py  configs.py
snapfolio/ml/: __init__.py  dataset.py  features.py  train.py
tests/: conftest.py  test_cmb_amount_below.py  test_document_classify.py  test_i18n.py  test_licaitong_name.py  test_llm_fallback.py  test_ml_features.py  test_name_fallback.py  test_numbers.py  test_ocr_audit.py  test_ocr_normalize.py  test_reconcile.py  test_regression.py  test_strip_chrome.py  test_wesee_extract.py
tests/fixtures/: README.md
