[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "snapfolio"
version = "0.1.0"
description = "Extract structured holdings from Chinese broker app screenshots"
requires-python = ">=3.10"
dependencies = [
    "rapidocr-onnxruntime>=1.3.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "Pillow>=10.0.0",
]

[project.scripts]
snapfolio = "snapfolio.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["snapfolio*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
